--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
           restore-keys: ${{ runner.os }}-pip-
 
       - name: Install Dependencies
-        run: pip install -r ./requirements/local.txt
+        run: pip install -r ./requirements/dev.txt
         if: steps.pip-cache.outputs.cache-hit != 'true'
 
       - name: Load pre-commit cache
